--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,45 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# Bytecode & Cache
+__pycache__/
+*.pyc
+*.pyo
+
+# Virtualenv / Poetry
+.venv/
+.env
+*.egg-info/
+
+# IDE / Editor
+.vscode/
+.idea/
+.DS_Store
+
+# Logs / Temp
+*.log
+*.tmp
+*.swp
+
+# Airflow
+airflow/logs/
+airflow/tmp/
+infra/airflow/logs/
+infra/airflow/tmp/
+
+# Spark / Delta / Checkpoints
+spark-warehouse/
+derby.log
+/lake/
+/_checkpoints/
+
+# dbt
+dbt/target/
+dbt/dbt_packages/
+
+# Jupyter
+.ipynb_checkpoints/
+
+# Docker
+*.pid
