--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,12 @@ readme = "README.md"
 python = "^3.11"
 
 
+[tool.poetry.group.dev.dependencies]
+black = "^25.9.0"
+ruff = "^0.13.1"
+mypy = "^1.18.2"
+pytest = "^8.4.2"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
