--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.11"
+kafka-python = "^2.2.15"
 
 
 [tool.poetry.group.dev.dependencies]
