--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
   build:
@@ -22,8 +22,18 @@ jobs:
       - name: Install Poetry
         run: pip install poetry
 
+      - name: Cache Poetry & Pip
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cache/pypoetry
+            ~/.cache/pip
+          key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-poetry-
+
       - name: Install dependencies
-        run: poetry install
+        run: poetry install --no-interaction --no-ansi
 
       - name: Run Ruff (Lint)
         run: poetry run ruff check .
@@ -31,5 +41,5 @@ jobs:
       - name: Run Black (Format Check)
         run: poetry run black --check .
 
-      - name: Run Pytest (allow empty)
-        run: poetry run pytest || true
+      - name: Run Pytest
+        run: poetry run pytest -v --maxfail=1
