--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,3 +21,8 @@ pytest = "^8.4.2"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
+pythonpath = ["."]
+addopts = "-v"
+testpaths = ["tests"]
