--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.11"
+kafka-python = "^2.2.15"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -20,3 +21,8 @@ pytest = "^8.4.2"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
+pythonpath = ["."]
+addopts = "-v"
+testpaths = ["tests"]
