--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ package-mode = false
 [tool.poetry.dependencies]
 python = "^3.11"
 kafka-python = "^2.2.15"
+pyspark = "^4.0.1"
 
 
 [tool.poetry.group.dev.dependencies]
